fix: Chevrons are uncentered with uncollapsed
Still need to discuss updating the chevron flow but this works for now

--- a/styles/_DropdownFilter.scss
+++ b/styles/_DropdownFilter.scss
@@ -79,18 +79,15 @@
     transition-duration: 0.5s;
     transition-property: transform;
     transform: rotate(0deg);
-    transform-origin: top center;
 
     &:hover {
       cursor: pointer;
     }
 
     &.expanded {
-      top: 16px;
       transition-duration: 0.5s;
       transition-property: transform;
       transform: rotate(180deg);
-      transform-origin: top center;
     }
 
     &.disabled {
